// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User > should render loading 1`] = `
<div>
  <div
    class="_loading_fdfca4"
  >
    <div
      class="_loader_fdfca4"
    />
  </div>
</div>
`;

exports[`User > should render server error 1`] = `
<div>
  <div
    class="_error_fdfca4"
  >
    <div
      class="_error_fdfca4"
    >
      Server error
    </div>
  </div>
</div>
`;

exports[`User > should render user follow button 1`] = `
<div>
  <div
    class="_User_fdfca4"
  >
    <div
      class="_Avatar_69744d"
    >
      <div
        class="_listPlaceholder_69744d"
      />
    </div>
    <a
      class="_fullName_fdfca4"
      href="/placeholder"
    >
      foobar
    </a>
    <button
      class="_follow_fdfca4"
    >
      Follow
    </button>
  </div>
  ,
</div>
`;
